# talent-city-fa

./: .gitignore  README.md  alembic.ini  pyproject.toml
src/: config.py  database.py  main.py
src/api/: admin.py  article_themes.py  articles.py  auth.py  dependencies.py  favourites.py  images.py  index.py  roles.py  users.py
src/connectors/: redis_connector.py
src/exceptions/: base.py  favourites.py  images.py
src/migrations/: env.py
src/migrations/versions/: 2025_02_05_2355-6e2f14c63344_initial_migration.py  2025_02_08_0023-f61bcedf77eb_add_article_themes.py  2025_02_08_0036-7fd0f3caee79_add_column_in_article.py  2025_02_18_0025-07206d8bf427_add_users.py  2025_02_18_0037-2de7e6cfbd6a_add_roles.py  2025_02_18_0048-d36653eeb324_add_user_id_in_articles.py  2025_02_18_2038-2b7a1385b7ac_add_users_roles.py  2025_02_23_2119-577232c1a009_make_email_unique_users.py  2025_03_12_2251-fa8b84c9f07a_articlesorm_change_nullable_fields.py  2025_03_19_2316-a8b02272348c_users_add_column.py  2025_03_19_2341-644fdfa2c24e_roles_add_column.py  2025_03_19_2348-4f78ed967efe_article_themes_add_column.py  2025_03_20_2359-9d9e98c6dcb1_users_rename_field.py  2025_03_21_0004-76dec7f0280d_roles_rename_field.py  2025_03_21_0006-50627ccf2a5b_article_themes_rename_field.py  2025_03_26_0009-a4ed88754956_add_favourites.py  (+1 more)
src/models/: __init__.py  article_themes.py  articles.py  articles_images.py  favourites.py  images.py  roles.py  users.py  users_roles.py
src/repositories/: article_themes.py  articles.py  base.py  favourites.py  images.py  roles.py  users.py  users_roles.py
src/schemas/: article_themes.py  articles.py  favourites.py  images.py  roles.py  users.py  users_roles.py
src/services/: auth.py
src/tasks/: celery_app.py  tasks.py
src/utils/: db_manager.py  usefull.py
(+2 files in other folders)
